--- a/GatewayConference/Tablecells/MainviewCell/MainViewCell.xib
+++ b/GatewayConference/Tablecells/MainviewCell/MainViewCell.xib
@@ -15,8 +15,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-gD-bZ5">
-                        <rect key="frame" x="73" y="52" width="288" height="90"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-gD-bZ5">
+                        <rect key="frame" x="72" y="50" width="289" height="90"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npb-40-XgI">
                                 <rect key="frame" x="45" y="8" width="198" height="21"/>
