--- a/GatewayConference/Tablecells/FaqTableCell/FAQTableViewCell.xib
+++ b/GatewayConference/Tablecells/FaqTableCell/FAQTableViewCell.xib
@@ -8,69 +8,72 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="239" id="KGk-i7-Jjw" customClass="FAQTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="415" height="239"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="FAQTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="415" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Spo-sd-epT">
-                        <rect key="frame" x="8" y="21" width="394" height="210"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Q :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2W-Ws-AGf">
-                                <rect key="frame" x="9" y="25" width="25" height="23"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="25" id="diq-tu-4aE"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NT-yx-4iO">
-                                <rect key="frame" x="14" y="49" width="372" height="154"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="154" id="lKh-2H-oMK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aDaaDSasdasDas" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqe-dT-2kD">
-                                <rect key="frame" x="33" y="25" width="353" height="23"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Faq_Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="WcX-QP-nOU">
+                        <rect key="frame" x="13" y="14" width="387" height="57"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7SV-Sz-kB9">
+                        <rect key="frame" x="15" y="18" width="379" height="28"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="9NT-yx-4iO" secondAttribute="bottom" constant="7" id="13i-hp-6M9"/>
-                            <constraint firstItem="9NT-yx-4iO" firstAttribute="leading" secondItem="Spo-sd-epT" secondAttribute="leading" constant="14" id="1JY-Tn-Ck5"/>
-                            <constraint firstItem="Bqe-dT-2kD" firstAttribute="trailing" secondItem="9NT-yx-4iO" secondAttribute="trailing" id="6DX-eQ-d0U"/>
-                            <constraint firstItem="9NT-yx-4iO" firstAttribute="trailing" secondItem="Spo-sd-epT" secondAttribute="trailingMargin" id="7if-Ai-FNZ"/>
-                            <constraint firstItem="9NT-yx-4iO" firstAttribute="top" secondItem="F2W-Ws-AGf" secondAttribute="bottom" constant="1" id="9Re-NE-w1C"/>
-                            <constraint firstItem="Bqe-dT-2kD" firstAttribute="top" secondItem="Spo-sd-epT" secondAttribute="top" constant="25" id="EnM-1K-j4W"/>
-                            <constraint firstItem="9NT-yx-4iO" firstAttribute="top" secondItem="Bqe-dT-2kD" secondAttribute="bottom" constant="1" id="Ifv-XK-G2D"/>
-                            <constraint firstItem="F2W-Ws-AGf" firstAttribute="leading" secondItem="Spo-sd-epT" secondAttribute="leading" constant="9" id="QQp-FK-IBg"/>
-                            <constraint firstItem="Bqe-dT-2kD" firstAttribute="leading" secondItem="Spo-sd-epT" secondAttribute="leading" constant="33" id="Tx5-63-slV"/>
-                            <constraint firstItem="Bqe-dT-2kD" firstAttribute="centerY" secondItem="F2W-Ws-AGf" secondAttribute="centerY" id="yhY-jH-pVa"/>
+                            <constraint firstAttribute="width" constant="379" id="6Gm-fP-qA8"/>
                         </constraints>
-                    </view>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" red="0.84237484056122447" green="0.20820850761689821" blue="0.13192038081614227" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mH3-er-q4n">
+                        <rect key="frame" x="15" y="48" width="379" height="18"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" red="0.36862745099999999" green="0.2470588235" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="Spo-sd-epT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NfY-6s-VrL"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Spo-sd-epT" secondAttribute="trailing" constant="5" id="XLI-9h-IpR"/>
-                    <constraint firstItem="Spo-sd-epT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="hKz-6t-jDe"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Spo-sd-epT" secondAttribute="bottom" constant="-1" id="hRa-y6-nB4"/>
+                    <constraint firstItem="WcX-QP-nOU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="4T3-Id-oPk"/>
+                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="56d-h4-AOX"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="WcX-QP-nOU" secondAttribute="trailing" constant="7" id="58T-nH-363"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="top" secondItem="7SV-Sz-kB9" secondAttribute="bottom" constant="1" id="DGi-Tu-Snm"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="7SV-Sz-kB9" secondAttribute="trailing" constant="13" id="Eiu-xL-z84"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="Fh3-NC-CEf"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mH3-er-q4n" secondAttribute="bottom" constant="66" id="LO2-0J-pv3"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="leading" secondItem="7SV-Sz-kB9" secondAttribute="leading" id="M4E-T8-GOy"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="WcX-QP-nOU" secondAttribute="trailing" constant="20" id="N6V-Rj-nYk"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="WcX-QP-nOU" secondAttribute="bottom" constant="5" id="OXJ-yP-ECo"/>
+                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="SSo-Vx-PpW"/>
+                    <constraint firstItem="WcX-QP-nOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="SgB-ee-geF"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mH3-er-q4n" secondAttribute="bottom" constant="10" id="XTh-wk-rjW"/>
+                    <constraint firstItem="mH3-er-q4n" firstAttribute="top" secondItem="7SV-Sz-kB9" secondAttribute="bottom" constant="2" id="cId-UW-wj5"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="mH3-er-q4n" secondAttribute="trailing" constant="13" id="jd1-9Q-3Zh"/>
+                    <constraint firstItem="7SV-Sz-kB9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="mzw-zb-XMR"/>
+                    <constraint firstItem="WcX-QP-nOU" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="5" id="sMe-gs-3nB"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="N6V-Rj-nYk"/>
+                        <exclude reference="sMe-gs-3nB"/>
+                        <exclude reference="mzw-zb-XMR"/>
+                        <exclude reference="DGi-Tu-Snm"/>
+                        <exclude reference="LO2-0J-pv3"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="answerLabel" destination="9NT-yx-4iO" id="el1-P3-W9Y"/>
-                <outlet property="faqView" destination="Spo-sd-epT" id="isR-F6-gMZ"/>
-                <outlet property="questionLabel" destination="Bqe-dT-2kD" id="rT5-xQ-Sjq"/>
+                <outlet property="answerLabel" destination="mH3-er-q4n" id="xBF-4J-xey"/>
+                <outlet property="questionLabel" destination="7SV-Sz-kB9" id="PR0-jT-Df9"/>
             </connections>
-            <point key="canvasLocation" x="414.5" y="215.5"/>
+            <point key="canvasLocation" x="414.5" y="113.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Faq_Background.png" width="425" height="171"/>
+    </resources>
 </document>
