--- a/GatewayConference/Tablecells/VideosCell/VideosCellTableViewCell.xib
+++ b/GatewayConference/Tablecells/VideosCell/VideosCellTableViewCell.xib
@@ -8,47 +8,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="VideosCellTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="121"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="103" id="KGk-i7-Jjw" customClass="VideosCellTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bd-jU-QcY">
-                        <rect key="frame" x="101" y="12" width="266" height="61"/>
+                        <rect key="frame" x="101" y="2" width="266" height="61"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="61" id="qcC-UK-yum"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSm-3c-o0G">
-                        <rect key="frame" x="101" y="81" width="266" height="19"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="16"/>
+                        <rect key="frame" x="101" y="71" width="266" height="19"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="clP-ov-5m3">
-                        <rect key="frame" x="8" y="20" width="80" height="80"/>
+                        <rect key="frame" x="8" y="10" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="PSW-Z9-HAp"/>
                             <constraint firstAttribute="height" constant="80" id="VHf-k2-Szn"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" red="0.27450980390000002" green="0.094117647060000004" blue="0.031372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="0.36862745098039218" green="0.24705882352941178" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="clP-ov-5m3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1ls-IP-SDT"/>
+                    <constraint firstItem="clP-ov-5m3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-1.5" id="1ls-IP-SDT"/>
                     <constraint firstItem="GSm-3c-o0G" firstAttribute="top" secondItem="8bd-jU-QcY" secondAttribute="bottom" constant="8" symbolic="YES" id="EVQ-Xa-vMx"/>
                     <constraint firstItem="clP-ov-5m3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="HQi-Aa-j1S"/>
                     <constraint firstItem="GSm-3c-o0G" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="13" id="QPg-li-qO7"/>
                     <constraint firstItem="8bd-jU-QcY" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="13" id="Qoq-Mg-QI9"/>
                     <constraint firstItem="8bd-jU-QcY" firstAttribute="trailing" secondItem="GSm-3c-o0G" secondAttribute="trailing" id="Urt-sC-HEO"/>
-                    <constraint firstItem="clP-ov-5m3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="jzQ-HV-oEP"/>
+                    <constraint firstItem="clP-ov-5m3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="jzQ-HV-oEP"/>
                     <constraint firstAttribute="trailingMargin" secondItem="8bd-jU-QcY" secondAttribute="trailing" id="kux-mD-EI7"/>
-                    <constraint firstItem="8bd-jU-QcY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="vyT-o4-94r"/>
+                    <constraint firstItem="8bd-jU-QcY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="vyT-o4-94r"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -56,7 +56,7 @@
                 <outlet property="imageObj" destination="clP-ov-5m3" id="Pa2-iG-Ogv"/>
                 <outlet property="title" destination="8bd-jU-QcY" id="mfj-mU-37a"/>
             </connections>
-            <point key="canvasLocation" x="421.5" y="361.5"/>
+            <point key="canvasLocation" x="421.5" y="352.5"/>
         </tableViewCell>
     </objects>
 </document>
