--- a/GatewayConference/Base.lproj/Main.storyboard
+++ b/GatewayConference/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -38,19 +38,19 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="systemMenuLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="CcH-1k-GjN">
                                 <rect key="frame" x="198" y="28" width="204" height="77"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="204" id="IDF-hQ-Iy4"/>
+                                    <constraint firstAttribute="width" constant="204" id="Cem-TW-sAF"/>
+                                    <constraint firstAttribute="height" constant="77" id="tYX-lz-naR"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CcH-1k-GjN" firstAttribute="centerX" secondItem="SI1-jz-XJA" secondAttribute="centerX" id="4fV-W1-qg8"/>
+                            <constraint firstItem="CcH-1k-GjN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="1Zj-Ag-wFf"/>
+                            <constraint firstItem="CcH-1k-GjN" firstAttribute="centerX" secondItem="SI1-jz-XJA" secondAttribute="centerX" id="9AJ-35-AA1"/>
                             <constraint firstItem="O8w-FC-8ah" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="9sj-PP-BHm"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="CcH-1k-GjN" secondAttribute="bottom" constant="495" id="CUc-i0-Gaz"/>
-                            <constraint firstItem="CcH-1k-GjN" firstAttribute="centerY" secondItem="O8w-FC-8ah" secondAttribute="centerY" id="D0b-P9-wji"/>
                             <constraint firstAttribute="trailing" secondItem="SI1-jz-XJA" secondAttribute="trailing" id="NYs-d8-xif"/>
+                            <constraint firstItem="CcH-1k-GjN" firstAttribute="centerY" secondItem="O8w-FC-8ah" secondAttribute="centerY" id="UAA-cc-Fh7"/>
                             <constraint firstItem="O8w-FC-8ah" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="WCN-6U-Ggo"/>
-                            <constraint firstItem="CcH-1k-GjN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Wcn-od-AR3"/>
                             <constraint firstItem="SI1-jz-XJA" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="grs-fi-6R0"/>
                             <constraint firstItem="SI1-jz-XJA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ic8-hW-biq"/>
                             <constraint firstItem="SI1-jz-XJA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="v1j-Si-5FE"/>
@@ -381,39 +381,9 @@
                                     <constraint firstAttribute="width" constant="234" id="xM0-b6-SVc"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Howdy," textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IY7-xf-6BC">
-                                <rect key="frame" x="19" y="339" width="106" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="106" id="KyT-TE-VQo"/>
-                                    <constraint firstAttribute="height" constant="42" id="yoe-8u-yQt"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="30"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to GC 2015" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0T-iu-ZVh">
-                                <rect key="frame" x="203" y="426" width="194" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="2dB-3a-B8D"/>
-                                    <constraint firstAttribute="width" constant="194" id="jWl-WH-IEA"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EoC-r5-4k7">
-                                <rect key="frame" x="559" y="72" width="39" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="USz-SX-NXo"/>
-                                    <constraint firstAttribute="width" constant="39" id="b0A-Cs-9wI"/>
-                                </constraints>
-                                <state key="normal" backgroundImage="add_friend.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LSb-Pu-fwn">
-                                <rect key="frame" x="0.0" y="242" width="600" height="5"/>
-                                <color key="backgroundColor" red="0.17254902420000001" green="0.99607849120000003" blue="0.96078437569999997" alpha="1" colorSpace="deviceRGB"/>
+                                <rect key="frame" x="0.0" y="242" width="600" height="3"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="No_profilePic.png" translatesAutoresizingMaskIntoConstraints="NO" id="cgS-J6-cVG">
                                 <rect key="frame" x="240" y="184" width="120" height="120"/>
@@ -422,8 +392,9 @@
                                     <constraint firstAttribute="height" constant="120" id="G83-cc-2AD"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fsdfdsfsdfdsfdsfdsfsfsdfdsfsdfdsf" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfC-Nc-DUM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfC-Nc-DUM">
                                 <rect key="frame" x="135" y="349" width="330" height="32"/>
+                                <color key="backgroundColor" red="0.17254902420000001" green="0.99607849120000003" blue="0.96078437569999997" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="330" id="PpO-md-dI9"/>
                                     <constraint firstAttribute="height" constant="32" id="yj1-1v-ZdC"/>
@@ -432,26 +403,41 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dor-ci-312">
+                                <rect key="frame" x="135" y="419" width="330" height="32"/>
+                                <color key="backgroundColor" red="0.17254902420000001" green="0.99607849120000003" blue="0.96078437569999997" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="auO-N6-TqQ"/>
+                                    <constraint firstAttribute="width" constant="330" id="jv5-ZH-dtn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u8-7a-6tZ">
+                                <rect key="frame" x="135" y="483" width="330" height="32"/>
+                                <color key="backgroundColor" red="0.17254902420000001" green="0.99607849120000003" blue="0.96078437569999997" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="ZU6-f3-Rh6"/>
+                                    <constraint firstAttribute="height" constant="32" id="oin-Q0-a5D"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.37254901960784315" green="0.24705882352941178" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Ono-Ed-FSK" firstAttribute="top" secondItem="B0T-iu-ZVh" secondAttribute="bottom" constant="153" id="3f2-qH-Ira"/>
-                            <constraint firstItem="IY7-xf-6BC" firstAttribute="top" secondItem="LSb-Pu-fwn" secondAttribute="bottom" constant="92" id="7pn-gR-Wbk"/>
-                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="leading" secondItem="IY7-xf-6BC" secondAttribute="trailing" constant="10" id="9yv-tR-3Rs"/>
+                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="centerX" secondItem="LSb-Pu-fwn" secondAttribute="centerX" id="2b6-CA-5yH"/>
+                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="top" secondItem="cgS-J6-cVG" secondAttribute="bottom" constant="45" id="Hb0-fF-tqs"/>
                             <constraint firstItem="LSb-Pu-fwn" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="80" id="I7E-s2-Wpq"/>
                             <constraint firstItem="Ono-Ed-FSK" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="438" id="IHv-Ly-nWY"/>
                             <constraint firstItem="WOE-n3-E7q" firstAttribute="top" secondItem="qNM-VA-HfY" secondAttribute="bottom" constant="8" symbolic="YES" id="ULf-4E-T55"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="bottom" constant="22" id="V7q-Eh-vfB"/>
-                            <constraint firstItem="lfC-Nc-DUM" firstAttribute="bottom" secondItem="IY7-xf-6BC" secondAttribute="bottom" id="XgN-H7-VjF"/>
-                            <constraint firstItem="EoC-r5-4k7" firstAttribute="top" secondItem="WOE-n3-E7q" secondAttribute="top" id="YLF-I8-PaF"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerX" secondItem="WOE-n3-E7q" secondAttribute="centerX" id="bBy-Q7-YBg"/>
-                            <constraint firstItem="IY7-xf-6BC" firstAttribute="leading" secondItem="5AO-Gp-XYv" secondAttribute="leadingMargin" constant="3" id="gW9-9I-Srk"/>
                             <constraint firstItem="LSb-Pu-fwn" firstAttribute="leading" secondItem="5AO-Gp-XYv" secondAttribute="leading" id="gdy-Yq-NgM"/>
-                            <constraint firstItem="cgS-J6-cVG" firstAttribute="centerX" secondItem="B0T-iu-ZVh" secondAttribute="centerX" id="jD6-WM-Aol"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerX" secondItem="LSb-Pu-fwn" secondAttribute="centerX" id="lpj-XY-1wU"/>
                             <constraint firstItem="cgS-J6-cVG" firstAttribute="centerY" secondItem="LSb-Pu-fwn" secondAttribute="centerY" id="t5u-FV-osS"/>
-                            <constraint firstItem="EoC-r5-4k7" firstAttribute="trailing" secondItem="5AO-Gp-XYv" secondAttribute="trailingMargin" constant="14" id="uwf-HV-IHy"/>
-                            <constraint firstItem="B0T-iu-ZVh" firstAttribute="centerX" secondItem="LSb-Pu-fwn" secondAttribute="centerX" id="vVR-eg-vu0"/>
                             <constraint firstItem="WOE-n3-E7q" firstAttribute="centerX" secondItem="5AO-Gp-XYv" secondAttribute="centerX" id="zx9-kJ-psG"/>
                         </constraints>
                     </view>
@@ -872,7 +858,6 @@
         <image name="No_profilePic.png" width="240" height="300"/>
         <image name="Survey.png" width="200" height="41"/>
         <image name="WorkInProgres.jpg" width="265" height="190"/>
-        <image name="add_friend.png" width="128" height="128"/>
         <image name="systemMenuLogo.png" width="254" height="71"/>
     </resources>
 </document>
