Login with Twitter Completed (Using SLComposeViewController).

--- a/GatewayConference/Base.lproj/Main.storyboard
+++ b/GatewayConference/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
@@ -224,14 +224,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="systemMenuLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="AcV-LC-TIN">
-                                <rect key="frame" x="154" y="28" width="293" height="98"/>
+                                <rect key="frame" x="154" y="33" width="293" height="98"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="293" id="1QI-hB-s6G"/>
                                     <constraint firstAttribute="height" constant="98" id="Rht-At-h2H"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BOc-jH-7qX">
-                                <rect key="frame" x="175" y="231" width="250" height="30"/>
+                                <rect key="frame" x="175" y="223" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="dcb-BA-xno"/>
                                     <constraint firstAttribute="height" constant="30" id="qN8-Bm-ehG"/>
@@ -246,7 +246,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hn6-6F-VK9">
-                                <rect key="frame" x="175" y="369" width="250" height="30"/>
+                                <rect key="frame" x="175" y="377" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="0IV-BK-vJr"/>
                                     <constraint firstAttribute="width" constant="250" id="6xu-Jk-weM"/>
@@ -260,19 +260,34 @@
                                     <action selector="connectLater:" destination="UBF-Ac-erI" eventType="touchUpInside" id="gFl-M6-Wpc"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dm-bJ-j3C">
+                                <rect key="frame" x="175" y="302" width="250" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Login with Twitter">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginwithTwitter:" destination="UBF-Ac-erI" eventType="touchUpInside" id="iQR-fi-MGG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="HhX-MH-q8a" firstAttribute="top" secondItem="eRT-Mn-Puj" secondAttribute="top" id="1ut-H0-FZ8"/>
-                            <constraint firstItem="BOc-jH-7qX" firstAttribute="top" secondItem="AcV-LC-TIN" secondAttribute="bottom" constant="105" id="N7w-Jd-YnX"/>
+                            <constraint firstItem="hn6-6F-VK9" firstAttribute="top" secondItem="2dm-bJ-j3C" secondAttribute="bottom" constant="45" id="7F5-qc-auw"/>
+                            <constraint firstItem="2dm-bJ-j3C" firstAttribute="top" secondItem="BOc-jH-7qX" secondAttribute="bottom" constant="49" id="7gm-bX-Wby"/>
+                            <constraint firstItem="BOc-jH-7qX" firstAttribute="top" secondItem="AcV-LC-TIN" secondAttribute="bottom" constant="92" id="N7w-Jd-YnX"/>
                             <constraint firstItem="AcV-LC-TIN" firstAttribute="centerX" secondItem="HhX-MH-q8a" secondAttribute="centerX" id="NQ7-Qv-RrC"/>
                             <constraint firstItem="hn6-6F-VK9" firstAttribute="centerX" secondItem="AcV-LC-TIN" secondAttribute="centerX" id="PKX-4u-Rzw"/>
                             <constraint firstItem="HhX-MH-q8a" firstAttribute="leading" secondItem="eRT-Mn-Puj" secondAttribute="leading" id="SAS-Ra-gpY"/>
                             <constraint firstItem="AcV-LC-TIN" firstAttribute="centerX" secondItem="eRT-Mn-Puj" secondAttribute="centerX" id="Tw3-tR-6bx"/>
+                            <constraint firstItem="2dm-bJ-j3C" firstAttribute="trailing" secondItem="hn6-6F-VK9" secondAttribute="trailing" id="eZ5-hc-JjD"/>
                             <constraint firstItem="hn6-6F-VK9" firstAttribute="leading" secondItem="BOc-jH-7qX" secondAttribute="leading" id="m3W-cj-9q8"/>
                             <constraint firstItem="HhX-MH-q8a" firstAttribute="bottom" secondItem="jFU-lM-uu7" secondAttribute="top" id="m7U-hV-JfG"/>
-                            <constraint firstItem="jFU-lM-uu7" firstAttribute="top" secondItem="hn6-6F-VK9" secondAttribute="bottom" constant="201" id="xra-Wt-Tap"/>
-                            <constraint firstItem="AcV-LC-TIN" firstAttribute="top" secondItem="Vpp-hm-Shx" secondAttribute="bottom" constant="8" symbolic="YES" id="zD9-Y8-gF7"/>
+                            <constraint firstItem="2dm-bJ-j3C" firstAttribute="leading" secondItem="hn6-6F-VK9" secondAttribute="leading" id="vzS-QT-Sba"/>
+                            <constraint firstItem="jFU-lM-uu7" firstAttribute="top" secondItem="hn6-6F-VK9" secondAttribute="bottom" constant="193" id="xra-Wt-Tap"/>
+                            <constraint firstItem="AcV-LC-TIN" firstAttribute="top" secondItem="Vpp-hm-Shx" secondAttribute="bottom" constant="13" id="zD9-Y8-gF7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Hfp-pz-v8P"/>
